# example_fastapi_database

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/config/: app_settings.py  db_settings.py
app/models/: model_score.py
app/routers/: api.py
app/routers/v1/: scores.py
app/schemas/: schema_input.py
app/services/: service_consult.py
app/sql_app/: crud.py  database.py  session_db.py
db/migrations/: 20230112220218_request.sql
tests/: conftest.py  test_main.py
