[tool.poetry]
name = "app"
version = "0.1.0"
description = "Example connection database"
authors = ["Miguel Ángel García Flores <miguelangelgarciafloresti@gmail.com>"]
license = "Creative Commons Atribución 4.0 Internacional"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
httpx = "^0.23.3"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
